; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/gtk/extr_yuiwindow.c_yui_window_destroy.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/gtk/extr_yuiwindow.c_yui_window_destroy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@keyfile = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [4 x i8] c"Gtk\00", align 1
@.str.2 = private unnamed_addr constant [2 x i8] c"X\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"Y\00", align 1
@inifile = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @yui_window_destroy to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @yui_window_destroy(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca [512 x i8], align 16
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i32 @GTK_WINDOW(i32* %6)
  %8 = call i32 @gtk_window_get_position(i32 %7, i32* %3, i32* %4)
  %9 = getelementptr inbounds [512 x i8], [512 x i8]* %5, i64 0, i64 0
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @sprintf(i8* %9, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load i32, i32* @keyfile, align 4
  %13 = getelementptr inbounds [512 x i8], [512 x i8]* %5, i64 0, i64 0
  %14 = call i32 @g_key_file_set_value(i32 %12, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.2, i64 0, i64 0), i8* %13)
  %15 = getelementptr inbounds [512 x i8], [512 x i8]* %5, i64 0, i64 0
  %16 = load i32, i32* %4, align 4
  %17 = call i32 @sprintf(i8* %15, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %16)
  %18 = load i32, i32* @keyfile, align 4
  %19 = getelementptr inbounds [512 x i8], [512 x i8]* %5, i64 0, i64 0
  %20 = call i32 @g_key_file_set_value(i32 %18, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0), i8* %19)
  %21 = load i32, i32* @inifile, align 4
  %22 = load i32, i32* @keyfile, align 4
  %23 = call i32 @g_key_file_to_data(i32 %22, i32 0, i32 0)
  %24 = call i32 @g_file_set_contents(i32 %21, i32 %23, i32 -1, i32 0)
  %25 = call i32 (...) @gtk_main_quit()
  ret void
}

declare dso_local i32 @gtk_window_get_position(i32, i32*, i32*) #1

declare dso_local i32 @GTK_WINDOW(i32*) #1

declare dso_local i32 @sprintf(i8*, i8*, i32) #1

declare dso_local i32 @g_key_file_set_value(i32, i8*, i8*, i8*) #1

declare dso_local i32 @g_file_set_contents(i32, i32, i32, i32) #1

declare dso_local i32 @g_key_file_to_data(i32, i32, i32) #1

declare dso_local i32 @gtk_main_quit(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
